refactor(landing/footer): change footer style

--- a/index.html
+++ b/index.html
@@ -107,32 +107,8 @@
         </section>
     </main>
 
-    <!-- footer -->
-    <footer style="text-align: center">
-        Made with ♥️ from Bushehr
-        <br />
-        Special thanks to
-        <a href="https://sweetalert2.github.io/" target="_blank" id="sweetAlert">SweetAlert2</a>
-        and
-        <a href="https://www.untitledui.com/" target="_blank" id="Untitled-UI">Untitled UI</a>
-    </footer>
-
-    <script src="/dist/js/libraries/highlightJS/highlight.min.js"></script>
-    <script src="/dist/js/index.js"></script>
-</body>
-
-            <section id="silverBox-CreditsSection" class="hidden">
-                <div class="silverBox-container">
-                    <h2 class="silverBox-sectionHeader">Credits</h2>
-
-                    <!-- team members -->
-                    <div class="silverBox-teamMembers"></div>
-                </div>
-            </section>
-        </main>
-
         <!-- footer -->
-        <footer style="text-align: center">
+        <footer>
             <br />
             Special thanks to
             <a
