--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="silverBox-container">
             <nav>
                 <div id="logo">
-                    <img src="src/images/silverBox-TransParent.svg"/>
+                    <img src="src/images/silverBox-TransParent.svg" />
                     <!-- <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="452px" height="452px" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd" xmlns:xlink="http://www.w3.org/1999/xlink">
                         <g><path style="opacity:1" fill="var(--primary-color)" d="M 113.5,72.5 C 180.501,72.3333 247.501,72.5 314.5,73C 247.938,125.196 181.105,177.029 114,228.5C 113.5,228 113,227.5 112.5,227C 113.483,175.788 113.816,124.288 113.5,72.5 Z"/></g>
                         <g><path style="opacity:1" fill="var(--primary-color)" d="M 367.5,90.5 C 407.234,111.28 425.067,144.28 421,189.5C 417.119,226.584 397.785,251.917 363,265.5C 356.642,258.006 350.142,250.506 343.5,243C 318.045,225.445 291.712,224.112 264.5,239C 243.444,254.389 222.11,269.389 200.5,284C 189.999,287.619 179.666,287.286 169.5,283C 163.55,278.094 160.883,271.761 161.5,264C 161.626,252.948 165.959,243.948 174.5,237C 239.261,188.632 303.594,139.798 367.5,90.5 Z"/></g>
@@ -78,7 +78,8 @@
 
                 <div id="silverBox-usageInstructions">
                     <p>
-                        <a href="https://github.com/silverethical/silverbox/releases" target="_blank">1. Download SilverBox</a>
+                        <a href="https://github.com/silverethical/silverbox/releases" target="_blank">1. Download
+                            SilverBox</a>
                     </p>
                     <p class="step1">
                         2. Initialize the plugin by referencing the
@@ -115,26 +116,17 @@
         </section>
     </main>
 
-        <!-- footer -->
-        <footer>
-            <br />
-            Special thanks to
-            <a
-                href="https://sweetalert2.github.io/"
-                target="_blank"
-                id="sweetAlert"
-                >SweetAlert2</a
-            >
-            and
-            <a
-                href="https://www.untitledui.com/"
-                target="_blank"
-                id="Untitled-UI"
-                >Untitled UI</a
-            >
-        </footer>
+    <!-- footer -->
+    <footer>
+        <br />
+        Special thanks to
+        <a href="https://sweetalert2.github.io/" target="_blank" id="sweetAlert">SweetAlert2</a>
+        and
+        <a href="https://www.untitledui.com/" target="_blank" id="Untitled-UI">Untitled UI</a>
+    </footer>
 
-        <script src="/dist/js/libraries/highlightJS/highlight.min.js"></script>
-        <script src="/dist/js/index.js"></script>
-    </body>
+    <script src="/dist/js/libraries/highlightJS/highlight.min.js"></script>
+    <script src="/dist/js/index.js"></script>
+</body>
+
 </html>
