feat(landingPage/usage): add span to get silverBox text

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <!-- container -->
             <div class="silverBox-container">
                 <h2 class="silverBox-tagline">
-                    Simplifying complexity, Empowering creativity
+                    Simplifying Complexity, Empowering Creativity
                 </h2>
 
                 <div class="whySilverBox">
@@ -89,8 +89,9 @@
                             <a
                                 href="https://github.com/silverethical/silverbox/releases"
                                 target="_blank"
-                                >1. Download SilverBox (click here!)</a
-                            >
+                                >1. Get
+                                <span>SilverBox.</span>
+                            </a>
                         </p>
                         <p class="step1">
                             2. Initialize the plugin by referencing the
@@ -114,9 +115,7 @@
                     <div class="silverBox-tableWrapper"></div>
                 </div>
             </section>
-
             <!-- credits -->
-
             <section id="silverBox-CreditsSection" class="hidden">
                 <div class="silverBox-container">
                     <h2 class="silverBox-sectionHeader">Credits</h2>
@@ -126,7 +125,6 @@
                 </div>
             </section>
         </main>
-
         <!-- footer -->
         <footer>
             <br />
