refactor(landingPage): change nameTag from ID to Class

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         that simplifies the creation of modals based on specific
                         configurations, catering to developers of all skill
                         levels. With
-                        <span id="silverBox-name-tag">SilverBox</span>, create
+                        <span class="silverBox-name-tag">SilverBox</span>, create
                         modals hassle-free, enhance the user experience, and
                         streamline development work.
                     </div>
