refactor(landingPage/banner): change banner text

--- a/index.html
+++ b/index.html
@@ -55,13 +55,14 @@
 
                 <div class="whySilverBox">
                     <div class="silverBox-introduction">
-                        A customizable, user-friendly JavaScript modal library
-                        that simplifies the creation of modals based on specific
-                        configurations, catering to developers of all skill
-                        levels. With
-                        <span class="silverBox-name-tag">SilverBox</span>, create
-                        modals hassle-free, enhance the user experience, and
-                        streamline development work.
+                        Welcome to <span class="silverBox-name-tag">SilverBox</span>, the JavaScript library that simplifies modals and alerts while offering unmatched customization.
+                        What sets SilverBox apart is
+                        its use of CSS variables, allowing developers to customize the visual appearance seamlessly. No more complex CSS files -
+                        simply modify the variables for a personalized look. Key features include streamlined modal creation, interactive
+                        alerts, unlimited customization options, lightweight performance, and cross-browser compatibility. Revolutionize your
+                        modals and alerts with SilverBox and simplify your development process. Experience the power of effortless customization
+                        and take your web applications to the next level. Visit our <a href="silverBox-documentationSection">documentation</a> and code <a href="silverBox-exampleSection">examples</a> to get started with
+                        SilverBox today.
                     </div>
                 </div>
                 <button class="get-silverBox">
