--- a/documentation/index.html
+++ b/documentation/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/dist/css/documentationPage.css">
-    <title>SilverBox | Documentation</title>
-</head>
-<body>
-    
-    <script src="/dist/js/documentationPage.js"></script>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="theme-color" content="#3286cf" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="/public/dist/css/documentationPage.css" />
+		<title>SilverBox | Documentation</title>
+	</head>
+	<body>
+
+		<script src="/public/dist/js/documentationPage.js"></script>
+	</body>
 </html>
