feat(header/documentation): add className to documentation

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li><a href="#silverBox-heroSection">Intro</a></li>
                     <li><a href="#silverBox-exampleSection">Example</a></li>
                     <li><a href="#silverBox-usageSection">Usage</a></li>
-                    <li>
+                    <li class="silverBox-documentation-header">
                         <a href="/documentation?v=latest">Documentation</a>
                     </li>
                 </ul>
