feat(documentation): add documentation page info

--- a/index.html
+++ b/index.html
@@ -1,152 +1,129 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="theme-color" content="#1c2638" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link
-            rel="stylesheet"
-            href="/public/dist/css/libraries/highlightJS/atom-one-dark-reasonable.min.css"
-        />
-        <link rel="icon" href="/public/src/images/silverBox-TransParent.png" />
-        <link rel="stylesheet" href="/public/dist/css/index.css" />
-        <title>SilverBox</title>
-    </head>
 
-    <body>
-        <header id="silverBox-header">
-            <div class="silverBox-container">
-                <nav>
-                    <div id="logo">
-                        <img src="/public/src/images/silverBox-TransParent.svg" />
-                        <!-- <svg xmlns="http://www.w3.org/2000/svg" version="1.1" width="452px" height="452px" style="shape-rendering:geometricPrecision; text-rendering:geometricPrecision; image-rendering:optimizeQuality; fill-rule:evenodd; clip-rule:evenodd" xmlns:xlink="http://www.w3.org/1999/xlink">
-                        <g><path style="opacity:1" fill="var(--primary-color)" d="M 113.5,72.5 C 180.501,72.3333 247.501,72.5 314.5,73C 247.938,125.196 181.105,177.029 114,228.5C 113.5,228 113,227.5 112.5,227C 113.483,175.788 113.816,124.288 113.5,72.5 Z"/></g>
-                        <g><path style="opacity:1" fill="var(--primary-color)" d="M 367.5,90.5 C 407.234,111.28 425.067,144.28 421,189.5C 417.119,226.584 397.785,251.917 363,265.5C 356.642,258.006 350.142,250.506 343.5,243C 318.045,225.445 291.712,224.112 264.5,239C 243.444,254.389 222.11,269.389 200.5,284C 189.999,287.619 179.666,287.286 169.5,283C 163.55,278.094 160.883,271.761 161.5,264C 161.626,252.948 165.959,243.948 174.5,237C 239.261,188.632 303.594,139.798 367.5,90.5 Z"/></g>
-                        <g><path style="opacity:1" fill="var(--primary-color)" d="M 364.5,268.5 C 406.347,275.514 431.18,299.847 439,341.5C 444.382,402.919 418.549,445.086 361.5,468C 346.275,473.371 330.608,476.705 314.5,478C 302.189,479.05 289.856,479.717 277.5,480C 241.833,480.667 206.167,480.667 170.5,480C 231.592,435.362 292.092,389.862 352,343.5C 363.794,331.07 370.294,316.237 371.5,299C 369.859,288.607 367.526,278.441 364.5,268.5 Z"/></g>
-                        <g><path style="opacity:1" fill="var(--primary-color)" d="M 286.5,278.5 C 296.946,278.973 305.446,283.307 312,291.5C 319.719,304.64 317.552,315.807 305.5,325C 241.051,372.448 176.884,420.282 113,468.5C 112.333,415.5 112.333,362.5 113,309.5C 114.587,308.273 115.921,308.606 117,310.5C 125.595,325.571 138.428,335.238 155.5,339.5C 170.825,342.071 185.491,340.238 199.5,334C 223.507,317.688 247.841,301.688 272.5,286C 271.167,285.333 271.167,284.667 272.5,284C 277.017,281.445 281.684,279.612 286.5,278.5 Z"/></g>
-                    </svg> -->
-                        <span>SilverBox</span>
-                    </div>
-                    <ul>
-                        <li><a href="#silverBox-heroSection">Intro</a></li>
-                        <li><a href="#silverBox-exampleSection">Example</a></li>
-                        <li><a href="#silverBox-usageSection">Usage</a></li>
-                        <li>
-                            <a href="#silverBox-documentationSection"
-                                >Documentation</a
-                            >
-                        </li>
-                    </ul>
-                    <div id="hamburger-menu">
-                        <div class="row"></div>
-                        <div class="row"></div>
-                        <div class="row"></div>
-                    </div>
-                </nav>
-            </div>
-        </header>
-        <!-- hero section -->
-        <section id="silverBox-heroSection">
-            <!-- container -->
-            <div class="silverBox-container">
-                <h2 class="silverBox-tagline">
-                    Simplifying Complexity, Empowering Creativity
-                </h2>
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="theme-color" content="#1c2638" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/public/dist/css/libraries/highlightJS/atom-one-dark-reasonable.min.css" />
+    <link rel="icon" href="/public/src/images/silverBox-TransParent.png" />
+    <link rel="stylesheet" href="/public/dist/css/index.css" />
+    <title>SilverBox</title>
+</head>
 
-                <div class="whySilverBox">
-                    <div class="silverBox-introduction">
-                        Welcome to <span class="silverBox-name-tag">SilverBox</span>, the JavaScript library that simplifies modals and alerts while offering unmatched customization.
-                        What sets SilverBox apart is
-                        its use of CSS variables, allowing developers to customize the visual appearance seamlessly. No more complex CSS files -
-                        simply modify the variables for a personalized look. Key features include streamlined modal creation, interactive
-                        alerts, unlimited customization options, lightweight performance, and cross-browser compatibility. Revolutionize your
-                        modals and alerts with SilverBox and simplify your development process. Experience the power of effortless customization
-                        and take your web applications to the next level. Visit our <a href="silverBox-documentationSection">documentation</a> and code <a href="silverBox-exampleSection">examples</a> to get started with
-                        SilverBox today.
-                    </div>
+<body>
+    <header id="silverBox-header">
+        <div class="silverBox-container">
+            <nav>
+                <a href="/" id="logo">
+                    <img src="/public/src/images/silverBox-TransParent.svg" />
+                    <span>SilverBox</span>
+                </a>
+                <ul>
+                    <li><a href="#silverBox-heroSection">Intro</a></li>
+                    <li><a href="#silverBox-exampleSection">Example</a></li>
+                    <li><a href="#silverBox-usageSection">Usage</a></li>
+                    <li>
+                        <a href="/documentation?v=latest">Documentation</a>
+                    </li>
+                </ul>
+                <div id="hamburger-menu">
+                    <div class="row"></div>
+                    <div class="row"></div>
+                    <div class="row"></div>
                 </div>
-                <button class="get-silverBox">
-                    <a href="#silverBox-usageSection">Get SilverBox</a>
-                </button>
+            </nav>
+        </div>
+    </header>
+    <!-- hero section -->
+    <section id="silverBox-heroSection">
+        <!-- container -->
+        <div class="silverBox-container">
+            <h2 class="silverBox-tagline">
+                Simplifying Complexity, Empowering Creativity
+            </h2>
+
+            <div class="whySilverBox">
+                <div class="silverBox-introduction">
+                    Welcome to <span class="silverBox-name-tag">SilverBox</span>, the JavaScript library that simplifies
+                    modals and alerts while offering unmatched customization.
+                    What sets SilverBox apart is
+                    its use of CSS variables, allowing developers to customize the visual appearance seamlessly. No more
+                    complex CSS files -
+                    simply modify the variables for a personalized look. Key features include streamlined modal
+                    creation, interactive
+                    alerts, unlimited customization options, lightweight performance, and cross-browser compatibility.
+                    Revolutionize your
+                    modals and alerts with SilverBox and simplify your development process. Experience the power of
+                    effortless customization
+                    and take your web applications to the next level. Visit our <a
+                        href="silverBox-documentationSection">documentation</a> and code <a
+                        href="silverBox-exampleSection">examples</a> to get started with
+                    SilverBox today.
+                </div>
+            </div>
+            <button class="get-silverBox">
+                <a href="#silverBox-usageSection">Get SilverBox</a>
+            </button>
+        </div>
+    </section>
+
+    <!-- main -->
+    <main>
+        <!-- example -->
+        <section id="silverBox-exampleSection">
+            <div class="silverBox-container">
+                <h2 class="silverBox-sectionHeader">Example</h2>
+            </div>
+        </section>
+        <!-- usage -->
+
+        <section id="silverBox-usageSection">
+            <div class="silverBox-container">
+                <h2 class="silverBox-sectionHeader">Usage</h2>
+
+                <div id="silverBox-usageInstructions">
+                    <p>
+                        <a href="https://github.com/silverethical/silverbox/releases" target="_blank">1. Get
+                            <span>SilverBox.</span>
+                        </a>
+                    </p>
+                    <p class="step1">
+                        2. Initialize the plugin by referencing the
+                        necessary files:
+                    </p>
+                    <pre><code class="language-html step1"></code></pre>
+                    <p class="step2">
+                        3. Call the silverBox function after the page has
+                        loaded:
+                    </p>
+                    <pre><code class="language-javascript step2"></code></pre>
+                </div>
             </div>
         </section>
 
-        <!-- main -->
-        <main>
-            <!-- example -->
-            <section id="silverBox-exampleSection">
-                <div class="silverBox-container">
-                    <h2 class="silverBox-sectionHeader">Example</h2>
-                </div>
-            </section>
-            <!-- usage -->
+        <!-- credits -->
+        <section id="silverBox-CreditsSection" class="hidden">
+            <div class="silverBox-container">
+                <h2 class="silverBox-sectionHeader">Credits</h2>
 
-            <section id="silverBox-usageSection">
-                <div class="silverBox-container">
-                    <h2 class="silverBox-sectionHeader">Usage</h2>
+                <!-- team members -->
+                <div class="silverBox-teamMembers"></div>
+            </div>
+        </section>
+    </main>
+    <!-- footer -->
+    <footer>
+        <br />
+        Special thanks to
+        <a href="https://sweetalert2.github.io/" target="_blank" id="sweetAlert">SweetAlert2</a>
+        and
+        <a href="https://www.untitledui.com/" target="_blank" id="Untitled-UI">Untitled UI</a>
+    </footer>
 
-                    <div id="silverBox-usageInstructions">
-                        <p>
-                            <a
-                                href="https://github.com/silverethical/silverbox/releases"
-                                target="_blank"
-                                >1. Get
-                                <span>SilverBox.</span>
-                            </a>
-                        </p>
-                        <p class="step1">
-                            2. Initialize the plugin by referencing the
-                            necessary files:
-                        </p>
-                        <pre><code class="language-html step1"></code></pre>
-                        <p class="step2">
-                            3. Call the silverBox function after the page has
-                            loaded:
-                        </p>
-                        <pre><code class="language-javascript step2"></code></pre>
-                    </div>
-                </div>
-            </section>
+    <script src="/public/dist/js/libraries/highlightJS/highlight.min.js"></script>
+    <script src="/public/dist/js/index.js"></script>
+</body>
 
-            <!-- documentation -->
-            <section id="silverBox-documentationSection">
-                <div class="silverBox-container">
-                    <h2 class="silverBox-sectionHeader">Documentation</h2>
-
-                    <div class="silverBox-tableWrapper"></div>
-                </div>
-            </section>
-            <!-- credits -->
-            <section id="silverBox-CreditsSection" class="hidden">
-                <div class="silverBox-container">
-                    <h2 class="silverBox-sectionHeader">Credits</h2>
-
-                    <!-- team members -->
-                    <div class="silverBox-teamMembers"></div>
-                </div>
-            </section>
-        </main>
-        <!-- footer -->
-        <footer>
-            <br />
-            Special thanks to
-            <a
-                href="https://sweetalert2.github.io/"
-                target="_blank"
-                id="sweetAlert"
-                >SweetAlert2</a
-            >
-            and
-            <a
-                href="https://www.untitledui.com/"
-                target="_blank"
-                id="Untitled-UI"
-                >Untitled UI</a
-            >
-        </footer>
-
-        <script src="/public/dist/js/libraries/highlightJS/highlight.min.js"></script>
-        <script src="/public/dist/js/index.js"></script>
-    </body>
 </html>
