refactor(header/banner): remove last sentence from the banner

--- a/index.html
+++ b/index.html
@@ -57,10 +57,7 @@
                     Revolutionize your
                     modals and alerts with SilverBox and simplify your development process. Experience the power of
                     effortless customization
-                    and take your web applications to the next level. Visit our <a
-                        href="silverBox-documentationSection">documentation</a> and code <a
-                        href="silverBox-exampleSection">examples</a> to get started with
-                    SilverBox today.
+                    and take your web applications to the next level.
                 </div>
             </div>
             <button class="get-silverBox">
