refactor(landingPage/silverBoxContainer): change silverBox container className

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -14,7 +14,7 @@
 <body>
 	<!-- header -->
 	<header id="silverBox-header">
-		<div class="silverBox-container">
+		<div class="container">
 			<nav>
 				<a href="/" id="logo">
 					<img src="/public/src/images/silverBox-TransParent.svg" />
@@ -40,7 +40,7 @@
 	<main>
 		<!-- documentation -->
 		<section id="silverBox-documentationSection">
-			<div class="silverBox-container">
+			<div class="container">
 				<h2 class="silverBox-sectionHeader">Documentation</h2>
 
 				<div class="silverBox-tableWrapper"></div>
