--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <header id="silverBox-header">
-        <div class="silverBox-container">
+        <div class="container">
             <nav>
                 <a href="/" id="logo">
                     <img src="/public/src/images/silverBox-TransParent.svg" />
@@ -39,7 +39,7 @@
     <!-- hero section -->
     <section id="silverBox-heroSection">
         <!-- container -->
-        <div class="silverBox-container">
+        <div class="container">
             <h2 class="silverBox-tagline">
                 Simplifying Complexity, Empowering Creativity
             </h2>
@@ -70,14 +70,14 @@
     <main>
         <!-- example -->
         <section id="silverBox-exampleSection">
-            <div class="silverBox-container">
+            <div class="container">
                 <h2 class="silverBox-sectionHeader">Example</h2>
             </div>
         </section>
         <!-- usage -->
 
         <section id="silverBox-usageSection">
-            <div class="silverBox-container">
+            <div class="container">
                 <h2 class="silverBox-sectionHeader">Usage</h2>
 
                 <div id="silverBox-usageInstructions">
@@ -102,7 +102,7 @@
 
         <!-- credits -->
         <section id="silverBox-CreditsSection" class="hidden">
-            <div class="silverBox-container">
+            <div class="container">
                 <h2 class="silverBox-sectionHeader">Credits</h2>
 
                 <!-- team members -->
